--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "use-sound": "^4.0.1",
     "web-vitals": "^3.0.2"
   },
+  "engines": {
+    "node": "16.16.0",
+    "npm": "8.11.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
